--- a/home/wiki/Android/Setup.html
+++ b/home/wiki/Android/Setup.html
@@ -425,6 +425,38 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
+            <a href="https://en.wikipedia.org" rel="nofollow" class="external free">https://en.wikipedia.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-05-01
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2016-05-17
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            6.2
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .xowa
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2016-05-01_file_v2b.7z" rel="nofollow" class="external text">images.update.2016-05-01 (.xowa)</a>
+          </p>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
             <a href="https://de.wikipedia.org" rel="nofollow" class="external free">https://de.wikipedia.org</a>
           </p>
         </td>
