--- a/home/wiki/Options/Files.html
+++ b/home/wiki/Options/Files.html
@@ -357,8 +357,8 @@ li.active a, li.active a:hover
             <td>
 <textarea xowa_prop="xowa.api.usr.cache.info" class="options_textbox options_readonly" readonly='readonly' style="width: 600px; height: 100px;" id='xowa_prop_3'>
 cache folder: C:\xowa\file
-space used: 95.678 MB
-file count: 6460
+space used: 724.245 KB
+file count: 68
 oldest file: 2016-03-31 20:42:31
 </textarea>
             </td>
