--- a/home/wiki/Options/Dev.html
+++ b/home/wiki/Options/Dev.html
@@ -315,6 +315,7 @@ home/wiki/Blog/2017-02
 home/wiki/App/Personal_wikis
 home/wiki/Special:XowaWikiDirectory
 home/wiki/Special:XowaDownloadCentral
+home/wiki/Change_log/v4.2.0.1702
 </textarea>
           </div><input type='hidden' id='xowa.app.startup.tabs.previous_list__key_box' value='xowa.app.startup.tabs.previous_list'> <input type='hidden' id='xowa.app.startup.tabs.previous_list__ctx_box' value='app'>
         </div>
@@ -333,7 +334,7 @@ home/wiki/Special:XowaDownloadCentral
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.startup.tabs.previous_selected")' title="reset to &quot;&quot;">&nbsp;</span>
           </div>
           <div class='xocfg_itm_data'>
-            <input id="xowa.app.startup.tabs.previous_selected" data-xocfg-key="xowa.app.startup.tabs.previous_selected" data-xocfg-type="int" accesskey="d" class="xocfg_data__int xocfg_data__readonly" type="text" readonly="true" value="3">
+            <input id="xowa.app.startup.tabs.previous_selected" data-xocfg-key="xowa.app.startup.tabs.previous_selected" data-xocfg-type="int" accesskey="d" class="xocfg_data__int xocfg_data__readonly" type="text" readonly="true" value="4">
           </div><input type='hidden' id='xowa.app.startup.tabs.previous_selected__key_box' value='xowa.app.startup.tabs.previous_selected'> <input type='hidden' id='xowa.app.startup.tabs.previous_selected__ctx_box' value='app'>
         </div>
         <div id='xowa.app.startup.tabs.previous_selected_help_div' class='xohelp_div'>
