--- a/index.html
+++ b/index.html
@@ -284,6 +284,15 @@
   </div>
 
   <div class="portal" id='xowa-portal-images'>
+    <span style="font-size:0.75em; margin:2px 4px 0px 0px">XOWA</span>
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+    <input type="hidden" name="cmd" value="_s-xclick">
+    <input type="hidden" name="hosted_button_id" value="PQ529NWHCGDQ2">
+      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+      <!--<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">-->
+    </form>        
+  </div>
+  <div class="portal" id='xowa-portal-images'>
     <br/>
     <div style='margin-left:6px;'>
       <a href="http://mac.softpedia.com/get/Utilities/XOWA.shtml#status">
