--- a/demo/wikimedia.html
+++ b/demo/wikimedia.html
@@ -2,6 +2,10 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <style type="text/css">
+    .header_div {
+      align:center;
+      width:800px; margin:0 auto;
+    }
     .results_div {
       align:center;
       width:800px; margin:0 auto;
@@ -62,6 +66,10 @@
   <script src="wikimedia.js" type='text/javascript'></script>
 </head>
 <body onload="wm.category.run();">
-  Please wait. Generating...
+  Example urls:
+  <ul>
+    <li><a href='http://xowa.org/wikimedia.html?domain=en.wikipedia.org&category=Earth'>http://xowa.org/wikimedia.html?domain=en.wikipedia.org&category=Earth</a></li>
+    <li><a href='http://xowa.org/wikimedia.html?domain=en.wikipedia.org&category=Coffee'>http://xowa.org/wikimedia.html?domain=en.wikipedia.org&category=Coffee</a></li>
+  </ul>
 </body>
 </html>
